--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- Cidak.co is a university of london society. -->
+<!-- cidak.co hacks hackathons. -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
